# Murmur

./: CMakeLists.txt  README.md  murmur.glade
include/: Boid.h  MurmurDrawingArea.h  MurmurStruct.h
src/: Boid.cpp  MurmurDrawingArea.cpp  MurmurStruct.cpp  main.cpp
